--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-    "version": 2,
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.php"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "api.php",
+      "use": "@vercel/php"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api.php",
+      "dest": "/api.php"
+    }
+  ]
+}
