--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api.php",
+      "src": "api/api.php",
       "use": "@vercel/php"
     }
   ],
   "routes": [
     {
       "src": "/api.php",
-      "dest": "/api.php"
+      "dest": "/api/api.php"
     }
   ]
 }
